top-banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h, initial-scale=1.0">
     <title>Arafi Talukder Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>this a portfolio</h1>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1><span class="orange">Arafi Talukder</span> World</h1>
+            <h3>About my personal information</h3>
+            <p>I am Arafi talukder.Now i am studying computer enginering in a last
+                semister.I want to get a job after completing diploma In sha allahh.
+                Then i want to admit BSC enginering in cse.After that i want to get
+                a govt job and take preparation for BCS In Sha Allahh.And whole life
+                i want to lead by sunnah.In sha Allah
+            </p>
+            <a class="button" target="blank" href="#">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/arafi.bg.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
