--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
             <img src="images/arafi.bg.png" alt="">
         </div>
     </section>
+    <section class="Dream-big">
+        <div class="half-width">
+            <img src="images/arafi.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Wev Developer</h3>
+            <p>I am starting to learn web design and develop.I belive that In sha allah i will be 
+                very big web developer I sha allah.My dream that are i want to learn around
+                of 4month and then i want to get a job</p>
+                <a class="button" target="blank" href="">Download Resume</a>
+        </div>
+
+    </section>
 
 </body>
 
